tags-list container responsiveness on mobile and desktop fixed

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -32,6 +32,6 @@
 /* TABLETS */
 @media screen and (min-width: 744px) {
   .banner__title {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
   }
 }
