--- a/src/components/Tags/Tags.css
+++ b/src/components/Tags/Tags.css
@@ -28,9 +28,9 @@
 @media screen and (min-width: 744px) {
   .tags-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    font-size: 1.3rem;
   }
 
   .tags-list {
